@@ -1,4 +1,7 @@
-$Id: Changelog.txt,v 1.501 2023/05/27 16:49:14 nanard Exp $
+$Id: Changelog.txt,v 1.502 2023/06/22 23:17:03 nanard Exp $
+
+2023/06/23:
+  detect FDSSDP as a Microsoft client
 
 2023/05/27:
   option enable_natpmp => enable_pcp_pmp
